Fix color contrast based on a11y testing

--- a/public/theme.css
+++ b/public/theme.css
@@ -116,14 +116,15 @@
 	--theme-bg-accent: hsla(var(--color-purple), var(--theme-accent-opacity));
 	--theme-code-inline-bg: hsla(var(--color-purple), .1);
 	--theme-code-inline-text: var(--theme-text);
-	--theme-code-bg: hsla(257, 31%, 25%, 1);
-	--theme-code-tabs: hsla(257, 38%, 35%, 1);
+	--theme-code-bg: hsla(257, 31%, 22%, 1);
+	--theme-code-tabs: hsla(257, 38%, 32%, 1);
 	--theme-code-text: hsla(var(--color-gray-95), 1);
 	--theme-navbar-bg: var(--theme-bg);
 	--theme-selection-color: hsla(var(--color-purple), 1);
 	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
 	--theme-code-selection-bg: hsla(var(--color-purple), 0.4);
-	--theme-code-highlight-bg: hsla(var(--color-purple), 0.3);
+	--theme-code-highlight-bg: hsla(var(--color-purple), 0.125);
+	--theme-code-highlight-border: hsla(var(--color-purple), 1);
 
 	--theme-bg-gradient: linear-gradient(180deg, var(--theme-bg-gradient-top), var(--theme-bg-gradient-top) calc(var(--theme-navbar-height) + var(--theme-mobile-toc-height)), var(--theme-bg-gradient-bottom));
 
@@ -161,6 +162,7 @@
 	--theme-navbar-bg: var(--theme-bg);
 	--theme-selection-color: hsla(var(--color-base-white), 100%, 1);
 	--theme-code-highlight-bg: hsla(var(--color-purple), 0.25);
+	--theme-code-highlight-border: hsla(var(--color-purple), 0.75);
 
 	--theme-glow-highlight: hsla(var(--color-base-purple), 50%, 1);
 	--theme-glow-diffuse: hsla(var(--color-base-purple), 35%, 0.4);
